@@ -11,7 +11,9 @@ for dev in /var/lib/partman/devices/*; do
     partitions=
     open_dialog PARTITIONS
     while { read_line num id size type fs path name; [ "$id" ]; }; do
-	partitions="$partition $id"
+	if [ "$fs" != free ]; then
+	    partitions="$partitions $id"
+	fi
     done
     close_dialog
 
